Added: (local provider option) showing source as title for medias without tags (needs tests). Added: (local provider option) use local files as arts (preliminary support).

--- a/opusapp/src/main/res/values/preferences-strings.xml
+++ b/opusapp/src/main/res/values/preferences-strings.xml
@@ -20,6 +20,8 @@
     <string name="preference_key_settings_location">settings_location</string>
     <string name="preference_key_tab_visibility">tab_visibility</string>
     <string name="preference_key_storage_display_details">storage_display</string>
+    <string name="preference_key_display_local_art">show_local_art</string>
+    <string name="preference_key_display_source_if_no_tags">show_src_if_no_media</string>
     <string name="preference_key_genre_display">genre_display</string>
 
 
