--- a/opusapp/src/main/res/xml/preferences.xml
+++ b/opusapp/src/main/res/xml/preferences.xml
@@ -60,9 +60,9 @@
         android:icon="@drawable/ic_action_help">
 
         <Preference
-            android:key="@string/preference_key_online_help"
-            android:title="@string/preference_title_online_help"
-            android:icon="@drawable/ic_action_help" />
+            android:key="@string/preference_key_privacy_policy"
+            android:title="@string/preference_title_privacy_policy"
+            android:icon="@drawable/ic_action_info" />
 
         <Preference
             android:key="@string/preference_key_opensource"
