--- a/opusapp/src/main/res/layout/activity_library_detail.xml
+++ b/opusapp/src/main/res/layout/activity_library_detail.xml
@@ -1,11 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.sothree.slidinguppanel.SlidingUpPanelLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/sliding_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="bottom">
 
-    <include layout="@layout/view_list_listview"/>
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/main_toolbar"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:minHeight="?attr/actionBarSize"
+            app:theme="@style/Theme.AppCompat.Light.DarkActionBar"
+            app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar" />
+
+        <include layout="@layout/view_list_listview"/>
+    </LinearLayout>
+
     <include layout="@layout/view_panel_player"/>
 </com.sothree.slidinguppanel.SlidingUpPanelLayout>
