--- a/opusapp/src/main/res/values-v11/style.xml
+++ b/opusapp/src/main/res/values-v11/style.xml
@@ -3,15 +3,10 @@
 
     <style name="AudioKit.TransparentActionBar" parent="AudioKit">
         <item name="android:windowContentOverlay">@null</item>
-        <item name="windowActionBarOverlay">true</item>
-        <item name="android:windowActionBarOverlay">true</item>
     </style>
 
     <style name="AudioKit.NavigationDrawer" parent="AudioKit">
-        <item name="homeAsUpIndicator">@drawable/ic_drawer</item>
-        <item name="android:windowContentOverlay">@null</item>
-        <item name="windowActionBarOverlay">true</item>
-        <item name="android:windowActionBarOverlay">true</item>
+        <!--><item name="homeAsUpIndicator">@drawable/ic_drawer</item>-->
     </style>
 
 </resources>
