--- a/opusapp/src/main/res/values-v11/themes_audiokit.xml
+++ b/opusapp/src/main/res/values-v11/themes_audiokit.xml
@@ -5,7 +5,9 @@
 
   <style name="AudioKit" parent="@style/_AudioKit"/>
 
-  <style name="_AudioKit" parent="Theme.AppCompat.Light.DarkActionBar">
+  <style name="_AudioKit" parent="Theme.AppCompat.Light">
+    <item name="android:windowActionBar">false</item>
+    <item name="windowActionBar">false</item>
 
     <item name="android:editTextBackground">@drawable/audiokit_edit_text_holo_light</item>
 
