--- a/opusapp/src/main/res/layout/activity_library_path.xml
+++ b/opusapp/src/main/res/layout/activity_library_path.xml
@@ -11,8 +11,9 @@
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:minHeight="?attr/actionBarSize"
-        app:theme="@style/Theme.AppCompat.Light.DarkActionBar"
-        app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar" />
+        app:theme="@style/ThemeOverlay.AppCompat.Dark"
+        app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar"
+        android:background="@color/materialPrimaryColor" />
 
 	<include layout="@layout/view_tabbed_pager"/>
 
