--- a/opusapp/src/main/res/layout/view_tabbed_pager.xml
+++ b/opusapp/src/main/res/layout/view_tabbed_pager.xml
@@ -7,7 +7,8 @@
 	<com.astuetz.PagerSlidingTabStrip
 	    android:id="@+id/pager_tabs"
 	    android:layout_width="match_parent"
-	    android:layout_height="48dip" />
+	    android:layout_height="48dip"
+        android:background="@color/materialPrimaryColor"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager_viewpager"
