--- a/opusapp/src/main/res/layout/activity_sound_effects.xml
+++ b/opusapp/src/main/res/layout/activity_sound_effects.xml
@@ -35,7 +35,7 @@
                     android:layout_marginTop="30.0dip"
                     android:layout_weight="1.0"
                     android:gravity="top"
-                    android:text="@string/unit_p28dB" />
+                    android:text="@string/unit_p20dB" />
 
                 <TextView
                     android:layout_width="fill_parent"
@@ -50,7 +50,7 @@
                     android:layout_marginBottom="50.0dip"
                     android:layout_weight="1.0"
                     android:gravity="bottom"
-                    android:text="@string/unit_m28dB" />
+                    android:text="@string/unit_m20dB" />
             </LinearLayout>
 
             <HorizontalScrollView
@@ -71,8 +71,34 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_weight="0.5">
+            android:layout_weight="0.5"
+            android:orientation="vertical">
 
+            <net.opusapp.player.ui.views.CustomTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/label_equalizer_presets"
+                android:textSize="@dimen/text_size_large"
+                android:paddingTop="10.0dip"
+                android:paddingBottom="10.0dip" />
+
+            <ListView
+                android:id="@+id/list_view_base"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:cacheColorHint="@color/transparent"
+                android:clipToPadding="false"
+                android:divider="@android:color/transparent"
+                android:dividerHeight="2.0dip"
+                android:drawSelectorOnTop="true"
+                android:fadingEdge="vertical"
+                android:fastScrollEnabled="true"
+                android:horizontalSpacing="@dimen/grid_item_spacing"
+                android:verticalSpacing="@dimen/grid_item_spacing"
+                android:paddingTop="10.0dip"
+                android:paddingBottom="10.0dip"
+                android:scrollbarStyle="outsideOverlay"
+                android:scrollbars="vertical" />
         </LinearLayout>
 
     </LinearLayout>
