Updated: changed spinner to appcompat v7 drawer for library management.

--- a/opusapp/src/main/res/values-v11/themes_audiokit.xml
+++ b/opusapp/src/main/res/values-v11/themes_audiokit.xml
@@ -8,6 +8,7 @@
   <style name="_AudioKit" parent="Theme.AppCompat.Light">
     <item name="android:windowActionBar">false</item>
     <item name="windowActionBar">false</item>
+    <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
 
     <item name="android:editTextBackground">@drawable/audiokit_edit_text_holo_light</item>
 
