--- a/opusapp/src/main/res/layout/activity_library_main.xml
+++ b/opusapp/src/main/res/layout/activity_library_main.xml
@@ -1,36 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
+<com.sothree.slidinguppanel.SlidingUpPanelLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/drawer_layout"
+    android:id="@+id/sliding_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="bottom" >
 
-    <com.sothree.slidinguppanel.SlidingUpPanelLayout
-        android:id="@+id/sliding_layout"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="bottom" >
+        android:orientation="vertical">
 
-        <LinearLayout
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/main_toolbar"
+            android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:minHeight="?attr/actionBarSize"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark"
+            app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar"
+            android:background="@color/materialPrimaryColor" />
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/main_toolbar"
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:minHeight="?attr/actionBarSize"
-                app:theme="@style/ThemeOverlay.AppCompat.Dark"
-                app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar"
-                android:background="@color/materialPrimaryColor" />
+        <android.support.v4.widget.DrawerLayout
+            android:id="@+id/drawer_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-            <include layout="@layout/view_tabbed_pager"/>
-        </LinearLayout>
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:orientation="vertical">
 
-        <include layout="@layout/view_panel_player"/>
+                <include layout="@layout/view_tabbed_pager"/>
+            </LinearLayout>
 
-    </com.sothree.slidinguppanel.SlidingUpPanelLayout>
+            <ListView
+                android:id="@+id/list_drawer"
+                android:layout_gravity="start"
+                android:layout_width="280dp"
+                android:layout_height="fill_parent"
+                android:choiceMode="singleChoice"
+                android:divider="@android:color/transparent"
+                android:dividerHeight="0dp"
+                android:horizontalSpacing="@dimen/grid_item_spacing"
+                android:verticalSpacing="@dimen/grid_item_spacing"
+                android:paddingTop="10.0dip"
+                android:paddingBottom="10.0dip"
+                android:background="@color/background_material_light" />
 
-</android.support.v4.widget.DrawerLayout>
+        </android.support.v4.widget.DrawerLayout>
+    </LinearLayout>
+
+    <include layout="@layout/view_panel_player"/>
+
+</com.sothree.slidinguppanel.SlidingUpPanelLayout>
