--- a/opusapp/src/main/res/values/styles.xml
+++ b/opusapp/src/main/res/values/styles.xml
@@ -17,6 +17,12 @@
         <!--<item name="homeAsUpIndicator">@drawable/ic_drawer</item>-->
     </style>
 
+    <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
+        <item name="spinBars">true</item>
+        <item name="color">@android:color/white</item>
+    </style>
+
+
     <style name="PlayerButton">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">match_parent</item>
