--- a/opusapp/src/main/res/values/themes_audiokit.xml
+++ b/opusapp/src/main/res/values/themes_audiokit.xml
@@ -7,6 +7,7 @@
 
   <style name="_AudioKit" parent="Theme.AppCompat.Light">
     <item name="windowActionBar">false</item>
+    <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
 
     <item name="android:editTextStyle">@style/EditTextAudioKit</item>
 
